Minor fixups
Fix extra spacing on "counterpart" and display "Misc" for any item with characteristics

--- a/css/cardSearch.css
+++ b/css/cardSearch.css
@@ -355,7 +355,6 @@
 .cs-extra-card-data-title {
   font-size: 1.2em;
   font-weight: bold;
-  font-style: italic;
   text-decoration: underline;
   border-bottom: thin solid #DADADA;
 }
